[package]
name = "merkle-trie-clock"
version = "0.1.0"
edition = "2021"
description = "A merkle-trie-based clock for CRDTs."
repository = "https://github.com/JasonkayZK/merkle-trie-clock"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
murmurhash32 = { version = "0.3.1" }
anyhow = { version = "1.0.81" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
log = { version = "0.4.21" }
env_logger = { version = "0.11.3" }

[dev-dependencies]
actix-web = { version = "4" }
actix-cors = {version = "0.7.0"}
rusqlite = { version = "0.31.0" }
