[workspace]

resolver = "1"

members = [
    "core",
    "server",
    "client",
]

[workspace.dependencies]
# Log
log = { version = "0.4.21" }
env_logger = { version = "0.11.3" }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
# Time
chrono = { version = "0.4" }
# Hash & Id
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
murmurhash32 = { version = "0.3.1" }
# Error
anyhow = { version = "1.0.81" }
