[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
merkle_trie_clock = { path = "../core" }

log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

reqwest = { version = "0.12.3", features = ["json", "blocking"] }
crossterm = { version = "0.27.0" }
